--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
   </head>
   <body>
-    <h1>Java Script practice</h1>
+    <h1>Java Script</h1>
 
-    <!--<script src="alert.js"></script>-->
-     <!--<script src="datatypes.js"></script>--> 
-     <script src="java.js"></script>
+       <a href="./Practice/index.html">Practice</a>
+      <a href="./Task/index.html">Task</a><br>
+       
+
+
   </body>
 </html>
