--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JS Practics</title>
   </head>
   <body>
-    <h1>Java Script</h1>
+    <h1>Java Scripts</h1>
 
        <a href="./Practice/index.html">Practice</a>
       <a href="./Task/index.html">Task</a><br>
